[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stompx"
version = "0.0.1"
description = "Stochastic  propagation on networks models and tools, with application to malware"
authors = [
    { name = "Rafael Rodríguez", email = "rafael.rodriguez@ubu.es" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/rrodgar/stompx"
Repository = "https://github.com/rrodgar/stompx"


[tool.setuptools.packages.find]
where = ["src"]
include = ["stompx*"]
